tests/ui/non_function.stderr
error: expected `fn`
 --> tests/ui/non_function.rs:4:1
  |
4 | struct NotAFunction {
  | ^^^^^^
